BuildConfig not working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders.usesCleartextTraffic = false
+            buildConfigField "String", "BASE_URL", '"https://nmedia.herokuapp.com"'
+        }
+        debug {
+            manifestPlaceholders.usesCleartextTraffic = true
+            buildConfigField "String", "BASE_URL", '"http://192.168.0.105:9999"'
         }
     }
     compileOptions {
@@ -37,9 +43,11 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.3.5"
+    def nav_version = "2.6.0"
     def room_version = "2.5.2"
     def lifecycle_version = "2.4.0-alpha02"
+
+    implementation 'androidx.annotation:annotation:1.6.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.20"
     implementation 'androidx.core:core-ktx:1.10.1'
