--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.NeWork"
-        tools:targetApi="31" >
+        tools:targetApi="31"
+        android:usesCleartextTraffic="${usesCleartextTraffic}"
+        android:name=".application.App"
+        >
         <activity
             android:name=".ui.MainActivity"
             android:exported="true" >
