--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -17,6 +17,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
     buildFeatures {
         buildConfig = true
@@ -46,13 +48,18 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.1'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
+    implementation 'androidx.glance:glance:1.0.0-rc01'
     def nav_version = "2.6.0"
     def room_version = "2.5.2"
     def lifecycle_version = "2.4.0-alpha02"
 
     implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.1.1'
+    implementation 'androidx.paging:paging-compose:3.2.0'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.20"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -80,8 +87,13 @@ dependencies {
 
     implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10")
 
-    implementation("com.google.dagger:hilt-android:2.46.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.35")
+    implementation("androidx.paging:paging-runtime-ktx:3.2.0")
+
+    implementation 'com.google.dagger:hilt-android:2.46.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.46.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    kapt 'com.github.bumptech.glide:compiler:4.13.2'
 
     implementation("androidx.paging:paging-runtime-ktx:3.2.0")
 }
